@@ -162,6 +162,8 @@ siril_common_SOURCES = \
 	core/siril_log.h \
 	core/siril_networking.c \
 	core/siril_networking.h \
+	core/siril_spawn.c \
+	core/siril_spawn.h \
 	core/siril_update.c \
 	core/siril_update.h \
 	core/siril_world_cs.c \
